회원가입 디자인

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>성진진</title>
+    <title>성진</title>
     <meta charset="UTF-8">
     {% block css %}
     {% endblock css %}
