--- a/posts/templates/posts/register.html
+++ b/posts/templates/posts/register.html
@@ -1,11 +1,41 @@
 {% extends './base.html' %}
+{% load static %}
+{% load widget_tweaks %}
 {% block content %}
-<div class="register-container">
-    <h2>회원가입</h2>
-    <form method="post">
+<link rel="stylesheet" href="{% static 'posts/css/register.css' %}">
+
+
+<div class="wrapper">
+    <div class="form-container">
+      <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">가입하기</button>
-    </form>
-</div>
-{% endblock %}
+        <h3>회원 가입</h3>
+
+        <p>양식에 맞추어 회원 정보를 입력해주세요.</p>
+        <div class="form-group">
+          {{form.username|add_class:"form-control"}}
+          <span>아이디</span>
+          <span class="border"></span>
+        </div>
+        <div class="form-group">
+          {{form.nickname|add_class:"form-control"}}
+          <span>닉네임</span>
+          <span class="border"></span>
+        </div>
+
+        <div class="form-group">
+
+          {{form.password1|add_class:"form-control"}}
+          <span>비밀번호</span>
+          <span class="border"></span>
+        </div>
+        <div class="form-group">
+          {{form.password2|add_class:"form-control"}}
+          <span>비밀번호 확인</span>
+          <span class="border"></span>
+        </div>
+        <button type="submit">신청하기</button>
+      </form>
+    </div>
+  </div>
+  {% endblock %}
